# securitysight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  collectors.py  pyproject.toml  seed_demo.py  update_repos.sh
pcrm/: __init__.py  __main__.py  cli.py  lake.py  pipeline.py  scoring.py  web.py
pcrm/collectors/: cisa_kev.py  shodan.py
pcrm/notify/: slack.py
securitysight/: README.md  collectors.py  dashboard.py  pyproject.toml  requirements-dev.txt  seed_demo.py
securitysight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
securitysight/pcrm/: __init__.py  config.py  lake.py  pipeline.py
securitysight/pcrm/collectors/: base.py  cisa_kev.py  mallory.py
securitysight/tests/: test_scoring.py
templates/: index.html
tests/: test_cli.py  test_update_guards.py
